Implement the rest of the authorization server.